[package]
name = "livetiming-logger"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
scraper = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-tungstenite = "0.15"
futures-util = "0.3"
url = "2"
select = "0.5"
regex = "1"
axum = { version = "0.6", features = ["ws"] }
tower = "0.4"
chrono = "0.4"